# orderbook-merger

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  main.cpp
include/: AggregatedOrderBook.hpp  CoinbasePro.hpp  Exceptions.hpp  Gemini.hpp  HttpClient.hpp  IExchange.hpp  Kraken.hpp  LiveDataManager.hpp  Logger.hpp  OrderBookEntry.hpp  WebSocketClient.hpp
src/: AggregatedOrderBook.cpp  CoinbasePro.cpp  Gemini.cpp  HttpClient.cpp  Kraken.cpp  LiveDataManager.cpp  Logger.cpp  WebSocketClient.cpp
tests/: OrderBookTests.cpp
